--- a/_posts/2016-07-09-on_road.md
+++ b/_posts/2016-07-09-on_road.md
@@ -14,7 +14,7 @@ tags: []
   
 “投行暂时还是算了吧，搞IT出国容易，IT无国界”，学了两月Java，找了个Android工作，这时我搬到了番禺里仁洞。不到半年，公司经营不善，要把我调到深圳总公司。“我可是要去新加坡的，那里天蓝房价低，护照吸进手，世界免签走，我要做世界公民”，签证没办到，坐上绿皮车，一路去上海。
 
-漕河泾，出了地铁就是思科大厦，旁边还有分贝大屏幕。跟同来的前同事一起报了Linux培训班，他安利我的，其实我想来北京。“Who is familiar with Python”，法国同事问道，“I know Java，you can teach me copy and paste”，我答道。
+漕河泾，出了地铁就是思科大厦，旁边还有分贝大屏幕。跟同来的前同事一起报了Linux培训班，其实我想来北京。“Who is familiar with Python”，法国同事问道，“I know Java，you can teach me copy and paste”，我答道。
 
 我喜欢这个小外企，他们来自全球各地，文档规范，节奏轻松。最好玩的事，是帮老外点餐，原来我不知道黄瓜叫cucumber。“你英语挺好的，看老外和中国同事，经常叫你帮他们翻译，从不背单词的你，毕业后竟然背了两百多天”，心里是真开心，不会再因为面试安永失败而不敢跟人说，我英语还行。
 
